# S54-0226-ScaleOps-Angular-DormSphere

./: README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/db/: schema.sql
backend/src/: main.rs
backend/src/db/: connection.rs
backend/src/models/: hostel.rs  maintenance.rs  mod.rs  room.rs  student.rs
backend/src/routes/: auth.rs  health.rs  hostels.rs  maintenance.rs  mod.rs  rooms.rs  students.rs
dormsphere/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
dormsphere/src/: index.html  styles.css
dormsphere/src/app/: app.config.ts  app.css  app.html  app.routes.server.ts  app.routes.ts  app.spec.ts  app.ts
dormsphere/src/app/core/http/: loading.interceptor.ts  toast.interceptor.ts
dormsphere/src/app/core/ui/: loading.service.ts  toast-container.ts  toast.service.ts
dormsphere/src/app/features/dashboard/pages/dashboard/: dashboard.css  dashboard.html  dashboard.ts
dormsphere/src/app/features/hostels/components/hostel-navbar/: hostel-navbar.html  hostel-navbar.ts
dormsphere/src/app/features/hostels/data/: hostel-store.service.ts  hostel.model.ts  hostel.seed.ts
dormsphere/src/app/features/login/: login.css  login.html  login.ts
dormsphere/src/app/features/maintenance/data/: maintenance-store.service.ts  maintenance.model.ts
dormsphere/src/app/features/rooms/data/: room-store.service.ts  room.model.ts
dormsphere/src/app/features/students/data/: student-store.service.ts  student.model.ts
dormsphere/src/environments/: environment.prod.ts
(+36 files in other folders)
